--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "dotenv-safe": "^8.2.0",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^3.0.0"
   }
 }
