--- a/serverless.yml
+++ b/serverless.yml
@@ -28,8 +28,8 @@ provider:
   runtime: nodejs12.x
 
 # you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  stage: dev
+  region: ${env:AWS_REGION}
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
